<resources>
    <string name="app_name">mkamprat-CountBook</string>
    <string name="new_counter_title">New Counter</string>

    <string name="counterName">Input counter name</string>
    <string name="counterDate"></string>
    <string name="counterInitVal">Starting Value</string>
    <string name="counterCurrentVal">Counters Current Value</string>
    <string name="counterComments">Comments...</string>
    <string name="counterCreate">Create</string>



    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_counter">new_counter</string>
</resources>
