<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="assignment1.mkamprat_countbook.new_counter"
    tools:showIn="@layout/activity_new_counter">

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/counterName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/counterName"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="88dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/counterDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/counterDate"
            android:inputType="date"
            android:textAlignment="viewStart"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="200dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginTop="116dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/counterInitVal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/counterInitVal"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="300dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginTop="116dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/counterCurrentVal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/counterCurrentVal"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="300dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="160dp"
        android:layout_marginTop="168dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/counterComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/counterComments"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="400dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/counterCreate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginRight="8dp"
        android:text="@string/counterCreate"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="340dp" />

</android.support.constraint.ConstraintLayout>
